Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/lambdaExpression/AbstractClass_neg.out
AbstractClass_neg.java:16:17: compiler.err.prob.found.req: (compiler.misc.not.a.functional.intf: AbstractClass_neg.SAM)
1 error
